# pcb-defect-detection

./: .gitignore  README.md  pyproject.toml  requirements-baseline.txt  requirements-spdconv.txt
app/: streamlit_app.py  streamlit_app_llm.py
configs/: train_baseline.yaml  train_spdconv.yaml
scripts/: evaluate.py  infer.py  install_spdconv.sh  prepare_dataset.py  train.py
src/pcbdet.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pcbdet/data/: prepare.py  voc.py  yolo.py
src/pcbdet/eval/: report.py
src/pcbdet/infer/: heic.py  infer_one.py
src/pcbdet/models/: factory.py
src/pcbdet/utils/: repro.py  torch_compat.py  wandb.py
